--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ theme: dzb
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git 
-  repo: git@github.com:zjzhome/posts.git
+  repo: https://github.com/zjzhome/posts.git
   branch: master
 
 
